[gd_scene load_steps=5 format=3 uid="uid://ybmn21in4i06"]

[ext_resource type="Script" path="res://src/scenes/tea_choose/tea_ingredient_book_info.gd" id="1_n0yp6"]
[ext_resource type="Resource" uid="uid://b2ek4h84tkyv1" path="res://resources/tea_varieties/base/red_tea.tres" id="2_l3lvp"]
[ext_resource type="Texture2D" uid="uid://c6lsgl2ykjbw0" path="res://assets/ingredients/red_tea.png" id="3_5jd01"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ig8m6"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[node name="TeaIngredientBookInfo" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_n0yp6")
ingredient_data = ExtResource("2_l3lvp")

[node name="IngredientSprite" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_5jd01")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="IngredientTitle" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Red Tea"

[node name="IngredientDescription" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_ig8m6")
text = "Bitter type of tea. Doesnâ€™t have the same influence as black tea, you can drink this as much"
autowrap_mode = 2
